# CROO-AI-AGENT-Hackathon

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
artifacts/: demo-audit.json  demo-audit.md
artifacts/benchmark/: proofmesh-mini-benchmark.json  proofmesh-mini-benchmark.md
artifacts/phase1/: contradicted-claim.json  contradicted-claim.md  supported-artifact.json  supported-artifact.md  unsupported-claim.json  unsupported-claim.md
artifacts/phase2/: mock-cap-batch-summary.json  mock-cap-batch-summary.md  mock-cap-demo-log.json  mock-cap-demo-log.md
artifacts/phase3/: croo-purchase-attempt.json  croo-purchase-attempt.md  live-dry-run-audit.json  (+3 more)
deployment/: agent-store-listing.json  env.example  live-integration-notes.md
docs/: CROO AI AGENT Hackathon.docx
examples/: check_croo_activity.py  check_live_readiness.py  research_claim.json  run_all_evidence.py  run_benchmark.py  run_croo_provider.py  run_live_dry_run.py  run_mock_cap_batch.py  run_mock_cap_demo.py
experiments/: 2026-06-26-proofmesh-live-readiness.md  2026-06-26-proofmesh-local-audit.md  2026-06-26-proofmesh-mock-cap-lifecycle.md  2026-06-26-proofmesh-phase1-acceptance.md
reference/: croo-ai-agent-1.ipynb  msagent1.ipynb
submission/: checklist.md  demo-runbook.md  demo-script.md  dorahacks-copy.md  evidence-map.md  judging-rubric.md
tests/: test_auditor.py  test_benchmark.py  test_cap_mock.py  test_croo_provider.py  test_live_adapter.py
wiki/: index.md  log.md
writeup/: architecture.md  kaggle-assets-plan.md  kaggle-writeup.md  paper-outline.md
(+25 files in other folders)
