[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proofmesh"
version = "0.1.0"
description = "CAP-callable verification and provenance agent for CROO AI Agent Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ProofMesh Contributors"}
]
dependencies = []

[project.optional-dependencies]
live = [
  "croo-sdk>=0.2.1"
]

[project.scripts]
proofmesh = "proofmesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
